<resources>
    <string name="app_name">House Keeper</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">Tasks</string>
    <string name="overview">Overview</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="important_urgent">Important + Urgent</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_send">Send</string>
    <string name="due_on">Due On:</string>
    <string name="edit">edit</string>
    <string name="complete">complete</string>
    <string name="not_important_not_urgent">Not Important + Not Urgent</string>
    <string name="important_not_urgent">Important + Not Urgent</string>
    <string name="not_important_urgent">Not Important + Urgent</string>
    <string name="task_title">Title</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="create_task">Create Task</string>
    <string name="start_camera">START_CAMERA</string>
    <string name="edit_existing_task">edit_existing_task</string>
    <string name="question_complete_task">Complete Task?</string>
    <string name="cancel">cancel</string>
    <string name="task">Task</string>
    <string name="open">Open</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="assign_house">Assign House</string>
    <string name="due_date">Due Date</string>
    <string name="reminder">Reminder</string>
    <string name="street_name">Street Name</string>
    <string name="street_number">Street Number</string>
    <string name="delete_archive">Delete Archive</string>
    <string name="revive">Revive</string>
    <string name="houses">Houses</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="add_house">Add House</string>
    <string name="activity_cant_be_null">Activity cannot be null</string>
    <string name="task_from_text">TASK_FROM_TEXT</string>
    <string name="location">**Location:**</string>
    <string name="completed">completed</string>
    <string name="dialog">Dialog</string>
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="image_removed">Image removed</string>
    <string name="undo">undo</string>
    <string name="list_edit_houses">List/Edit Houses</string>
    <string name="house">House</string>
    <string name="tasks_bottom_nav">tasks</string>
    <string name="overview_bottom_nav">overview</string>
    <string name="description_text_small">Small</string>
    <string name="description_text_normal">normal</string>
    <string name="settings">Settings</string>
    <string name="description_text_size">Description Text Size</string>
    <string name="user_config">user_config</string>
    <string name="task_reminder">Task Reminder:</string>
    <string name="house_intent_extra">house</string>
    <string name="task_title_intent_extra">taskTitle</string>
    <string name="channelId">13</string>
    <string name="no_location_assigned">No Location assigned.</string>
</resources>
