<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/house">
        <menu>
            <item
                android:id="@+id/nav_add_house"
                android:icon="@drawable/ic_add_box_black_24dp"
                android:title="@string/add_house" />
            <item
                android:id="@+id/nav_edit_houses"
                android:icon="@drawable/ic_mode_edit_black_24dp"
                android:title="@string/list_edit_houses" />
        </menu>
    </item>

    <item android:title="@string/task">
        <menu>
            <item
                android:id="@+id/nav_archive"
                android:icon="@drawable/ic_menu_archive"
                android:title="@string/menu_archive" />
        </menu>
    </item>

</menu>
