<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupImportance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/radioButtonImportantUrgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important_urgent" />

        <RadioButton
            android:id="@+id/radioButtonNotImportantUrgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_important_urgent" />

        <RadioButton
            android:id="@+id/radioButtonImportantNotUrgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important_not_urgent" />

        <RadioButton
            android:id="@+id/radioButtonNotImportantNotUrgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_important_not_urgent" />

    </RadioGroup>

    <Button
        android:id="@+id/editText"
        android:layout_below="@+id/radioGroupImportance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Due Date"
        />

</RelativeLayout>