<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="24sp"
        android:text="@string/settings" />

    <View
        android:id="@+id/divider_settings_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_below="@id/textView_settings"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView_description_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_settings_top"
        android:paddingTop="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="16sp"
        android:text="@string/description_text_size" />

    <RadioGroup
        android:id="@+id/radio_group_description_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_description_text_size"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_description_text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/description_text_small" />

        <RadioButton
            android:id="@+id/radio_description_text_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/description_text_normal" />
    </RadioGroup>
</RelativeLayout>